[package]
name = "sportgems"
version = "0.2.2"
edition = "2018"
authors = ["Fabian Gebhart"]
description = "Find valuable gems 💎 in your tracked sport 🚴 activity!"
readme = "README.md"
repository = "https://github.com/fgebhart/sportgems"
homepage = "https://github.com/fgebhart/sportgems"
license = "MIT"
keywords = ["sports", "activity", "parser", "rust", "sports-data"]

[package.metadata.maturin]
requires-python = ">=3.6"
classifier = [
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Operating System :: Microsoft",
    "Operating System :: Windows",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Rust",
]

[lib]
name = "sportgems"
crate-type = ["cdylib"]

[dependencies.pyo3]
version = "0.12.4"
features = ["extension-module"]

[profile.release]
lto = true
panic = "abort"