[package]
name = "sportgems"
version = "0.8.0"
edition = "2018"
authors = ["Fabian Gebhart"]
description = "Find valuable gems 💎 in your tracked sport 🚴 activity!"
readme = "README.md"
repository = "https://github.com/fgebhart/sportgems"
homepage = "https://github.com/fgebhart/sportgems"
license = "MIT"
keywords = ["sports", "activity", "parser", "rust", "sports-data"]

[package.metadata.maturin]
requires-python = ">=3.8"
classifier = [
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Rust",
]

[lib]
name = "sportgems"
crate-type = ["cdylib"]

[dependencies]
fit = "0.5"

[dependencies.pyo3]
version = "0.15.1"

[features]
extension-module = ["pyo3/extension-module"]
default = ["extension-module"]

[profile.release]
lto = true
panic = "abort"